[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/Personagem/p1_walk01.png" type="Texture" id=3]
[ext_resource path="res://assets/Personagem/p1_walk02.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/p1_walk03.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/p1_walk04.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/p1_walk05.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/p1_walk06.png" type="Texture" id=8]
[ext_resource path="res://assets/Personagem/p1_walk07.png" type="Texture" id=9]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=10]
[ext_resource path="res://assets/Tiles/cloud1.png" type="Texture" id=11]
[ext_resource path="res://assets/Tiles/cloud2.png" type="Texture" id=12]
[ext_resource path="res://assets/Tiles/cloud3.png" type="Texture" id=13]
[ext_resource path="res://scenes/Moeda.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/lesma.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/blocoDest.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/platMovel.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=18]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=19]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=20]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=21]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=22]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 28.9204, 280.37 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.7144, 57.7176 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.9496, 1.11157 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.1652, 50.9383 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.626, 1.25784 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 46.1509, 1.81433, 0, 0, 0, 0, 356.151, 1.81433 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -60.9612, -18.6869, -118.829, 1.94801, 118.829, -1.94801, 192.133, -213.433, 0, 0, 0, 0, 470.847, -16.7389 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="spawn_point" type="Position2D" parent="."]

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="fim" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 4274.78, 431.584 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="fim"]
shape = SubResource( 8 )

[node name="dead_camera" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 800

[node name="personagem" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 316.611, 478.259 )
z_index = 1
collision_mask = 2
collision/safe_margin = 1.0
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="personagem"]
position = Vector2( 1, 0 )
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 1 )
frame = 6
playing = true

[node name="shape" type="CollisionShape2D" parent="personagem"]
position = Vector2( 1.88676, 1.13206 )
shape = SubResource( 2 )

[node name="rayE" type="RayCast2D" parent="personagem"]
position = Vector2( -24.23, 58.3905 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="rayD" type="RayCast2D" parent="personagem"]
position = Vector2( 28.2021, 57.5961 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="camera" type="Camera2D" parent="personagem"]
current = true
limit_left = 0
limit_bottom = 800
smoothing_enabled = true

[node name="pes" type="Area2D" parent="personagem"]
editor/display_folded = true
collision_layer = 1024
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="personagem/pes"]
position = Vector2( 1.54001, 61.6009 )
shape = SubResource( 3 )

[node name="corpo" type="Area2D" parent="personagem"]
editor/display_folded = true
collision_layer = 1024
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="personagem/corpo"]
position = Vector2( 1.1376, 0 )
shape = SubResource( 4 )

[node name="cabeca" type="Area2D" parent="personagem"]

[node name="shape" type="CollisionShape2D" parent="personagem/cabeca"]
position = Vector2( 1.26477, -59.4713 )
shape = SubResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 70, 70 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 65535, 3, 0, 131071, 3, 0, 196607, 3, 0, 262143, 3, 0, 327679, 3, 0, 262159, 1, 0, 262160, 0, 0, 262161, 0, 0, 262162, 2, 0, 262173, 1, 0, 262174, 2, 0, 393215, 3, 0, 458751, 3, 0, 393242, 1, 0, 393243, 2, 0, 524287, 3, 0, 458782, 1, 0, 458783, 2, 0, 458789, 0, 0, 458790, 5, 0, 458791, 0, 0, 458806, 6, 0, 458807, 7, 0, 458814, 0, 0, 589823, 3, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 4, 0, 524309, 4, 0, 524310, 4, 0, 524311, 1, 0, 524312, 0, 0, 524313, 2, 0, 524314, 4, 0, 524315, 4, 0, 524316, 4, 0, 524317, 4, 0, 524318, 4, 0, 524319, 4, 0, 524320, 4, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 3, 0, 524326, 3, 0, 524327, 3, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 4, 0, 524334, 4, 0, 524335, 4, 0, 524336, 4, 0, 524337, 4, 0, 524338, 4, 0, 524339, 4, 0, 524340, 4, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524344, 0, 0, 524350, 3, 0, 655359, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 589850, 5, 0, 589851, 5, 0, 589852, 5, 0, 589853, 5, 0, 589854, 5, 0, 589855, 5, 0, 589856, 5, 0, 589857, 3, 0, 589858, 3, 0, 589859, 3, 0, 589860, 3, 0, 589861, 3, 0, 589862, 3, 0, 589863, 3, 0, 589864, 3, 0, 589865, 3, 0, 589866, 3, 0, 589867, 3, 0, 589868, 3, 0, 589869, 5, 0, 589870, 5, 0, 589871, 5, 0, 589872, 5, 0, 589873, 5, 0, 589874, 5, 0, 589875, 5, 0, 589876, 5, 0, 589877, 3, 0, 589878, 3, 0, 589879, 3, 0, 589880, 3, 0, 589883, 1, 0, 589884, 0, 0, 589885, 0, 0, 589886, 2, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 5, 0, 655392, 5, 0, 655393, 3, 0, 655394, 3, 0, 655395, 3, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 3, 0, 655400, 3, 0, 655401, 3, 0, 655402, 3, 0, 655403, 3, 0, 655404, 3, 0, 655405, 5, 0, 655406, 5, 0, 655407, 5, 0, 655408, 5, 0, 655409, 5, 0, 655410, 5, 0, 655411, 5, 0, 655412, 5, 0, 655413, 3, 0, 655414, 3, 0, 655415, 3, 0, 655416, 3, 0, 786431, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 5, 0, 720928, 5, 0, 720929, 3, 0, 720930, 3, 0, 720931, 3, 0, 720932, 3, 0, 720933, 3, 0, 720934, 3, 0, 720935, 3, 0, 720936, 3, 0, 720937, 3, 0, 720938, 3, 0, 720939, 3, 0, 720940, 3, 0, 720941, 5, 0, 720942, 5, 0, 720943, 5, 0, 720944, 5, 0, 720945, 5, 0, 720946, 5, 0, 720947, 5, 0, 720948, 5, 0, 720949, 3, 0, 720950, 3, 0, 720951, 3, 0, 720952, 3, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 140, 184.725 )
scale = Vector2( 1.77996, 2.11663 )
texture = ExtResource( 11 )
offset = Vector2( 5.47878, 2.59665 )

[node name="Sprite6" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -115.46, 243.451 )
scale = Vector2( 1.77996, 2.11663 )
texture = ExtResource( 11 )
offset = Vector2( 5.47878, 2.59665 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 848.597, 240.779 )
scale = Vector2( 1.32116, 1.57899 )
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1057.08, 161.498 )
scale = Vector2( 1.32116, 1.57899 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 399.34, 278.951 )
scale = Vector2( 1.37024, 1.49628 )
texture = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 603.414, 190.861 )
scale = Vector2( 1.52958, 1.90985 )
texture = ExtResource( 13 )

[node name="moedas" type="Node2D" parent="."]
editor/display_folded = true

[node name="moeda" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 645.961, 521.229 )

[node name="moeda2" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 746.961, 520.699 )

[node name="moeda3" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 844.744, 519.885 )

[node name="moeda4" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 1700.96, 507.926 )

[node name="moeda5" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 1887.5, 371.602 )

[node name="moeda6" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 2102.75, 230.495 )

[node name="moeda7" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 2181.68, 443.352 )

[node name="moeda8" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 2487.81, 512.71 )

[node name="moeda9" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 1152.09, -95.7269 )

[node name="moeda10" parent="moedas" instance=ExtResource( 14 )]
position = Vector2( 1216.5, -96.6294 )

[node name="inimigos" type="Node2D" parent="."]
editor/display_folded = true

[node name="lesma" parent="inimigos" instance=ExtResource( 15 )]
position = Vector2( 553.849, 538.186 )
curve = SubResource( 6 )

[node name="blocos" type="Node2D" parent="."]

[node name="blocoDest" parent="blocos" instance=ExtResource( 16 )]

[node name="blocoDest2" parent="blocos" instance=ExtResource( 16 )]
position = Vector2( 961.444, 399.405 )

[node name="blocoDest5" parent="blocos" instance=ExtResource( 16 )]
position = Vector2( 1511.62, 544.676 )

[node name="blocoDest3" parent="blocos" instance=ExtResource( 16 )]
position = Vector2( 1151.49, 98.8565 )

[node name="blocoDest4" parent="blocos" instance=ExtResource( 16 )]
position = Vector2( 1221.49, 98.5962 )

[node name="blocoDest6" parent="blocos" instance=ExtResource( 16 )]
position = Vector2( 4106.95, 489.845 )

[node name="plataformas" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 3217.87, 503.433 )

[node name="platMovel" parent="plataformas" instance=ExtResource( 17 )]
curve = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 2
scale = Vector2( 3.5, 3.5 )
transform = Transform2D( 3.5, 0, 0, 3.5, 0, 0 )

[node name="touchLeft" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 2, 165 )
normal = ExtResource( 18 )
pressed = ExtResource( 19 )

[node name="touchRight" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 50, 165 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )

[node name="touchUp" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 300, 165 )
normal = ExtResource( 22 )
pressed = ExtResource( 23 )

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="fim" to="personagem" method="_on_fim_body_entered"]
[connection signal="morreu" from="personagem" to="." method="_on_personagem_morreu"]
[connection signal="body_entered" from="personagem/pes" to="personagem" method="_on_pes_body_entered"]
[connection signal="body_entered" from="personagem/corpo" to="personagem" method="_on_corpo_body_entered"]
[connection signal="body_entered" from="personagem/cabeca" to="personagem" method="_on_cabeca_body_entered"]
[connection signal="pressed" from="CanvasLayer/touchLeft" to="personagem" method="_on_touchLeft_pressed"]
[connection signal="released" from="CanvasLayer/touchLeft" to="personagem" method="_on_touchLeft_released"]
[connection signal="pressed" from="CanvasLayer/touchRight" to="personagem" method="_on_touchRight_pressed"]
[connection signal="released" from="CanvasLayer/touchRight" to="personagem" method="_on_touchRight_released"]
[connection signal="pressed" from="CanvasLayer/touchUp" to="personagem" method="_on_touchUp_pressed"]
[connection signal="released" from="CanvasLayer/touchUp" to="personagem" method="_on_touchUp_released"]
